layer3, layer4, footer telah ditambahkan

--- a/index.html
+++ b/index.html
@@ -76,23 +76,46 @@
                 </div>
         </div>
     </div>
-    <div class="bgcon3">
-    <div class="backgroundContainer2">
-        <video id="background2" muted autoplay loop>
+    
+    <div class="layer3Container">        
+    <div class="layer1">
+         <video id="background2" muted autoplay loop>
             <source src ="img/konten1.mp4" type = "Video/mp4"></video>
         </video>
-    <div class="layer1Container">
-    <div class="layer1">
-        <div class="layer1left">
-            <div class="greetings">
-                <h1>Frieren: Beyond Journey's End</h1>
-            <div class="description">
+        <div class="greetings2">
+                <h4>Quotes</h4>
+            <div class="description2">
                 "Demons are descendants of beasts that lured adventurers into the dark by imitating human speech in order to devour them. Consummate Liar: Demons are by their very nature liars and will only talk to humans when they can manipulate them into dropping their guard or sparing them.''  
                 <p> - Frieren</p>
             </div>
-            </div></div></div></div>
-        </div>
+            </div></div></div>
 
+            <div class = "layer4">
+        <div class = "layer4Bg">
+            <div class = "layer4Content">
+                <div class = "layer4Text">
+                    <div class = "layer4TextHeading">
+                        This gonna be a unique journey for me to became web developer
+                    </div>
+                    <div class = "layer4TextSubtext">
+                        Pembuatan web ini masih dengan menggunakan metode ATM, hanya dengan menggunakan HTML dan CSS. Salam saya Renaldi pembuat web ini.
+                    </div>
+                </div>
+                <div class = "layer4ContactContainer">
+                    <a class = "layer4Contact" href = "#">
+                        Contact!
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+     <div class = "footerLayer">
+        <div class = "footerLayerBg">
+            <a class = "footerLayerAuthor" href = "https://github.com/renaldinafiawan/odinwebrenaldi" target = "_blank">
+                Webpage by: Renaldi Nafiawan
+            </a>
+        </div>
+    </div>
 
 </body>
 </html>
